Add langTag for /paginated request and response
